--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
-    "bulma": "^0.7.2"
+    "buefy": "^0.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
@@ -25,6 +25,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-plugin-jest": "^22.1.2",
     "vue-template-compiler": "^2.5.17",
     "sass-loader": "^7.1.0",
     "node-sass": "^4.11.0"
