--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
-    "buefy": "^0.7.1"
+    "buefy": "^0.7.1",
+    "@fortawesome/fontawesome-free": "^5.6.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
